--- a/views/login.html
+++ b/views/login.html
@@ -13,13 +13,13 @@
         <div class="login__goHome">
             <a href="/"><i class="fa-solid fa-left-long"></i></a>
         </div>
-        <div class="form-container">
+        <div class="login__form-container">
             <form action="/login" class="login__form" method="post">
                 <div class="form__logo">
                     <img src="/img/logotransparente.png" alt="Logo">
                 </div>
                 <h2>Iniciar Sesión</h2>
-                <div class="form-body">
+                <div class="login__form-body">
                     <input type="text" placeholder="Usuario" name="userName" id="userName" required />
                     <input type="password" placeholder="Contraseña" name="userPassword" id="userPassword" required />
                     <label><input type="checkbox" id="recordarme" value="recordarme"><span>RECORDARME</span></label>
