--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,5 +1,5 @@
 .header {
-    background: linear-gradient(135deg, var(--navBarColor2), var(--navBarColor1));
+    background: linear-gradient(135deg, #4366B4, #FC3AD7);
 }
 
 .header-container {
