--- a/views/login.html
+++ b/views/login.html
@@ -25,7 +25,7 @@
                     <label><input type="checkbox" id="recordarme" value="recordarme"><span>RECORDARME</span></label>
                     <button type="submit">LOG IN</button>
                     <hr>
-                    <p>¿Aún no tienes cuenta? <a href="#">Registrarse</a></p>
+                    <p>¿Aún no tienes cuenta? <a href="/register">Registrarse</a></p>
                 </div>
             </form>
         </div>
