--- a/public/css/login.css
+++ b/public/css/login.css
@@ -42,7 +42,7 @@
   align-items: center;
   border: 1px solid gray;
   background-color: #fff;
-  box-shadow: 3px 3px 2px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: 3px 3px 10px 1px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   max-width: 450px;
   max-height: 450px;
@@ -85,6 +85,7 @@
   width: 100%;
   border-radius: 5px;
   border: 1px solid gray;
+  outline: none;
 }
 
 .login__form button {
