--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
             <ul class="header-nav-menu__itemlist">
               <li class="itemlist__li"><a href="#">Explorar</a></li>
               <li class="itemlist__li"><a href="#">Comprar</a></li>
-              <li class="itemlist__li"><a href="#">Vender</a></li>
+              <li class="itemlist__li"><a href="/shoppingCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
             <ul class="header-nav-menu__itemlist">
               <li class="itemlist__li"><a href="/register">Sign up</a></li>
