--- a/views/register.html
+++ b/views/register.html
@@ -6,10 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página de Registro</title>
   <link rel="stylesheet" href="/css/styles.css">
+  <script src="https://kit.fontawesome.com/be2c20f70d.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="register">
   <main class="register__main">
+    <div class="goHome">
+      <a href="/"><i class="fa-solid fa-left-long"></i></a>
+  </div>
       <form action="/register" class="register__form" method="post">
           <div class="form__logo">
               <img src="/img/logotransparente.png" alt="Logo">
