--- a/views/shoppingCart.html
+++ b/views/shoppingCart.html
@@ -56,27 +56,27 @@
         <div class="container__box">
         <section class="products-container">
           <div class="product">
-            <img src="/img/shoppingCart_1.jpg" alt="Beat 1">
-            <h2>Electro DJ</h2>
-            <h2>Track</h2>
+            <a href="/product"><img src="./img/ariel.jpeg" alt="Beat 1"></a>
+            <h2>Ariel Garramunda</h2>
+            <h2>Ven a Jujuy</h2>
             <p>Precio: $30.00</p>
-            <button class="button__cart">Agregar al carrito</button>
+            <button class="button__cart">Eliminar</button>
           </div>
 
           <div class="product">
-            <img src="/img/shoppingCart_2.jpg" alt="Beat 2">
-            <h2>Red hot chilli peppers</h2>
-            <h2>Track</h2>
+            <a href="/product"><img src="./img/ibiza.jpeg" alt="Beat 2"></a>
+            <h2>Ibiza Rockefeller</h2>
+            <h2>Juncal y Billinghurst</h2>
             <p>Precio: $30.00</p>
-            <button class="button__cart">Agregar al carrito</button>
+            <button class="button__cart">Eliminar</button>
           </div>
 
           <div class="product">
-            <img src="/img/shoppingCart_3.jpg" alt="Beat 3">
-            <h2>The weeknd</h2>
-            <h2>Track</h2>
+            <a href="/product"><img src="./img/kachorro.jpeg" alt="Beat 3"></a>
+            <h2>Kachorro DJ</h2>
+            <h2>Vamos al billar</h2>
             <p>Precio: $30.00</p>
-            <button class="button__cart">Agregar al carrito</button>
+            <button class="button__cart">Eliminar</button>
           </div>
         </section>
         
