--- a/views/shoppingCart.html
+++ b/views/shoppingCart.html
@@ -58,7 +58,7 @@
           <div class="product">
             <a href="/product"><img src="./img/ariel.jpeg" alt="Beat 1"></a>
             <h2>Ariel Garramunda</h2>
-            <h2>Ven a Jujuy</h2>
+            <h4>Ven a Jujuy</h4>
             <p>Precio: $30.00</p>
             <button class="button__cart">Eliminar</button>
           </div>
@@ -66,18 +66,19 @@
           <div class="product">
             <a href="/product"><img src="./img/ibiza.jpeg" alt="Beat 2"></a>
             <h2>Ibiza Rockefeller</h2>
-            <h2>Juncal y Billinghurst</h2>
+            <h4>Juncal y Billinghurst</h4>
             <p>Precio: $30.00</p>
             <button class="button__cart">Eliminar</button>
           </div>
 
           <div class="product">
-            <a href="/product"><img src="./img/kachorro.jpeg" alt="Beat 3"></a>
+            <a href="/product"><img src="/img/kachorro.jpeg" alt="Beat 3"></a>
             <h2>Kachorro DJ</h2>
-            <h2>Vamos al billar</h2>
+            <h4>Vamos al billar</h4>
             <p>Precio: $30.00</p>
             <button class="button__cart">Eliminar</button>
           </div>
+          
         </section>
         
         <section class="cart-container">
