--- a/views/shoppingCart.html
+++ b/views/shoppingCart.html
@@ -79,12 +79,18 @@
             <button class="button__cart">Eliminar</button>
           </div>
           
+          <div class="product">
+            <a href="/product"><img src="/img/classical.jpeg" alt="Beat 3"></a>
+            <h2>Classical</h2>
+            <h4>Mozart | | Sessions #3</h4>
+            <p>Precio: $30.00</p>
+            <button class="button__cart">Eliminar</button>
         </section>
         
         <section class="cart-container">
           <h2>Cart Summary</h2>
-          <p>Total: <span class="total">$90.00</span></p>
-          <p>Impuestos: <span class="impuestos">$135.00</span></p>
+          <p>Total: <span class="total">$120.00</span></p>
+          <p>Impuestos: <span class="impuestos">$195.00</span></p>
           <div class="metodos-pagos">
             <i class="fa-brands fa-cc-visa"></i>
             <i class="fa-brands fa-cc-mastercard"></i>
