--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -1,7 +1,8 @@
 .button__container{
-    width: 51%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 10px;
   }
   
@@ -23,6 +24,10 @@
   }
 
   @media (min-width: 769px) {
+
+    .button__container{
+      width: 50%;
+    }
 
     .button__cart {
      width: 100%;
