--- a/views/index.html
+++ b/views/index.html
@@ -75,6 +75,9 @@
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
   </div>
+  <div class="banner__mobile">
+    <img src="/img/banner1.jpg" alt="banner alternativo">
+  </div>
   <!-- Main body -->
   <main id="home">
     <!-- Tajetas -->
