--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,6 +13,11 @@
   background-color: #d9afd9;
   background-image: linear-gradient(0deg, #d9afd9 0%, #acccdf 100%);
 }
+
+.banner__mobile{
+  display:none
+}
+
 a.btn {
   background: #0096a0;
   border-radius: 4px;
@@ -169,4 +174,10 @@ div.card.show div.flap1 {
 }
 div.card.show div.flap2 {
   transition: all 0.3s 0.2s ease-out;
+}
+@media (max-width:459px){
+  
+  div.cards{
+    margin-top: 10px;
+  }
 }
