--- a/public/css/register.css
+++ b/public/css/register.css
@@ -189,7 +189,7 @@ button[type="reset"] {
 
 .goHome i {
   position: relative;
-  right: 150px;
+  right: auto;
   color: #fff;
   padding: 10px;
   font-size: 2rem;
@@ -198,7 +198,14 @@ button[type="reset"] {
 }
 
 /* MEDIA QUERIES */
-@media screen and (max-width: 700px) {
+
+ @media (min-width:701px) {
+  .register__form{
+    width: 450px;
+  }
+  
+ }
+@media (min-width: 460px) and (max-width: 700px) {
   .box {
     width: 70%;
   }
@@ -206,11 +213,31 @@ button[type="reset"] {
   .popup {
     width: 70%;
   }
+  div.goHome {
+    position: fixed;
+    left: 10px;
+  }
+
+  .goHome i{
+    position: fixed;
+    left: 10px;
+    right: auto;
+  }
 }
 
-@media (min-width: 481px) {
+@media (max-width: 459px) {
   .register__form {
     width: 450px;
     margin-top: 7vh;
+  }
+  div.goHome {
+    position: fixed;
+    left: 10px;
+  }
+
+  .goHome i{
+    position: fixed;
+    left: 10px;
+    right: auto;
   }
 }
