--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -29,16 +29,19 @@
                     </div>
                 </div>
                 <div class="header-top-right">
-                    <a class="header-top-right__mobileButton" href="#">SIGN UP</a>
+                    <a class="header-top-right__mobileButton" href="/register">SIGN UP</a>
                     <nav class="header-nav-menu">
                         <ul class="header-nav-menu__itemlist">
-                            <li class="itemlist__li"><a href="#">Explorar</a></li>
-                            <li class="itemlist__li"><a href="#">Comprar</a></li>
-                            <li class="itemlist__li"><a href="#">Vender</a></li>
+                            <li class="itemlist__li"><a href="#">Categorias</a></li>
+
                         </ul>
                         <ul class="header-nav-menu__itemlist">
-                            <li class="itemlist__li"><a href="#">Sign up</a></li>
-                            <li class="itemlist__li"><a href="#"> Sign in</a></li>
+                            <li class="itemlist__li"><a href="/register">Sign up</a></li>
+                            <li class="itemlist__li"><a href="/login"> Sign in</a></li>
+                        </ul>
+                        <ul class="header-nav-menu__itemlist">
+                            <li class="itemlist__li"><a href="/shoppingCart"><i
+                                        class="fa-solid fa-cart-shopping"></i></a></li>
                         </ul>
                     </nav>
                 </div>
