--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,19 +1,22 @@
-.body__product {
- font-family: var(--tipografiaCuBeats), sans-serif;
- display: flex;
- flex-direction: column;
- justify-content: space-between;
- min-height: 100vh;
+.productDetail {
+  font-family: var(--tipografiaCuBeats), sans-serif;
+  background-color: #121212;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
 }
 
 .product__main {
-  max-width: 1200px;
+  width: 90%;
   margin: 0 auto;
 }
 
-.main__container {
+.product__main .main__container {
+  background-color: #1F1B24;
+  padding: 25px;
   width: 90%;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
 /* PROFILE SECTION */
@@ -31,6 +34,7 @@
   text-align: center;
   font-size: 1.5rem;
   margin: 10px 0;
+  color: darkgray;
 }
 
 .autor-profile img {
@@ -46,6 +50,7 @@
 
 .autor-redes i {
   font-size: 1.5rem;
+  color: darkgray;
 }
 
 /* PRODUCT DETAIL */
@@ -55,47 +60,52 @@
 
 .product-detail__card {
   display: flex;
-  gap: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 20px 0;
+}
+
+.card-img {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+}
+
+.card-img img {
+  width: 90px;
+  height: 90px;
 }
 
 .card__info {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   flex-grow: 1;
+  color: darkgray;
+  width: 100%;
 }
 
 .card__info button {
   border: none;
 }
 
-.card__info button i {
-  font-size: 1.2rem;
-  color: fuchsia;
-}
-
-.card-img {
-  margin: auto 0;
-}
-
 .card__menu {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 80px;
+  justify-content: space-around;
+  width: 100%;
+  margin-top: 20px;
 }
 
 .card__favoriteButton {
   background: none;
   border: none;
-  background-color: var(--colorCeleste);
+  background-color: #FF7597;
   color: white;
   border-radius: 5px;
   padding: 5px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
+  white-space: nowrap;
 }
 
 .card__favoriteButton i {
@@ -105,13 +115,11 @@
 .card__cartButton {
   background: none;
   border: none;
-  background-color: var(--colorCeleste);
+  background-color: #FF7597;
   color: white;
   border-radius: 5px;
   padding: 5px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
+  white-space: nowrap;
 }
 
 .card__cartButton i {
@@ -124,9 +132,43 @@
   margin: 20px 0;
 }
 
+@media (min-width:481px) {
+
+  .product-detail__card {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 0;
+  }
+
+  .card-img {
+    flex-grow: 0;
+  }
+
+  .card__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-grow: 1;
+  }
+
+  .card__menu {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: max-content;
+  }
+}
+
 @media (min-width: 769px) {
   .main__container {
     width: 100%;
+  }
+
+  .product__main {
+    max-width: 1200px;
+    margin: 0 auto;
   }
 
   .profile-info {
@@ -150,6 +192,27 @@
 
   .product-detail__card {
     width: 100%;
+    gap: 30px;
+
+  }
+
+  .card__info {
+    width: max-content;
+  }
+
+  .card-img {
+    width: none;
+  }
+
+  .card__menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 0;
+  }
+
+  .card__menu button {
+    width: 90px;
   }
 
   .card__reproductor {
