feat: refactor done!

--- a/src/views/shoppingCart.ejs
+++ b/src/views/shoppingCart.ejs
@@ -56,7 +56,7 @@
         <div class="container__box">
         <section class="products-container">
           <div class="product">
-            <a href="/product"><img src="./img/ariel.jpeg" alt="Beat 1"></a>
+            <a href="/products/product"><img src="/img/ariel.jpeg" alt="Beat 1"></a>
             <h2>Ariel Garramunda</h2>
             <h4>Ven a Jujuy</h4>
             <p>Precio: $30.00</p>
@@ -64,7 +64,7 @@
           </div>
 
           <div class="product">
-            <a href="/product"><img src="./img/ibiza.jpeg" alt="Beat 2"></a>
+            <a href="/products/product"><img src="/img/ibiza.jpeg" alt="Beat 2"></a>
             <h2>Ibiza Rockefeller</h2>
             <h4>Juncal y Billinghurst</h4>
             <p>Precio: $30.00</p>
@@ -72,7 +72,7 @@
           </div>
 
           <div class="product">
-            <a href="/product"><img src="/img/kachorro.jpeg" alt="Beat 3"></a>
+            <a href="/products/product"><img src="/img/kachorro.jpeg" alt="Beat 3"></a>
             <h2>Kachorro DJ</h2>
             <h4>Vamos al billar</h4>
             <p>Precio: $30.00</p>
@@ -80,7 +80,7 @@
           </div>
           
           <div class="product">
-            <a href="/product"><img src="/img/classical.jpeg" alt="Beat 3"></a>
+            <a href="/products/product"><img src="/img/classical.jpeg" alt="Beat 3"></a>
             <h2>Classical</h2>
             <h4>Mozart | | Sessions #3</h4>
             <p>Precio: $30.00</p>
