--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -45,11 +45,11 @@
             <ul class="header-nav-menu__itemlist">
               <li class="itemlist__li"><a href="#">Explorar</a></li>
               <li class="itemlist__li"><a href="#">Comprar</a></li>
-              <li class="itemlist__li"><a href="/shoppingCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+              <li class="itemlist__li"><a href="/products/shoppingCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
             <ul class="header-nav-menu__itemlist">
-              <li class="itemlist__li"><a href="/register">Sign up</a></li>
-              <li class="itemlist__li"><a href="/login"> Sign in</a></li>
+              <li class="itemlist__li"><a href="/users/register">Sign up</a></li>
+              <li class="itemlist__li"><a href="/users/login"> Sign in</a></li>
             </ul>
           </nav>
         </div>
