--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -37,8 +37,8 @@
                             <li class="itemlist__li"><a href="#">Vender</a></li>
                         </ul>
                         <ul class="header-nav-menu__itemlist">
-                            <li class="itemlist__li"><a href="#">Sign up</a></li>
-                            <li class="itemlist__li"><a href="#"> Sign in</a></li>
+                            <li class="itemlist__li"><a href="/users/register">Sign up</a></li>
+                            <li class="itemlist__li"><a href="/users/login"> Sign in</a></li>
                         </ul>
                     </nav>
                 </div>
