Cambio de nombre product a detail

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@
 @import url('footer.css');
 @import url('shoppingCart.css');
 @import url('login.css');
-@import url('product.css');
+@import url('detail.css');
 @import url("register.css");
 @import url('404.css');
 @import url('slider.css');
