--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Not Found</title>
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
+    <%- include('./partials/head', {
+        title : '404 Not Found'
+       }) %>
 <body>
     
 </body>
