--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,65 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header</title>
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-
-<body>
-    <header class="header">
-        <div class="header-container">
-            <div class="header-top">
-                <div class="header-top-left">
-                    <div class="burger-menu">
-                        <a class="burger-menu__link" href=""><i class="fas fa-bars burger-menu__i"></i></a>
-                    </div>
-                </div>
-                <div class="header__logo">
-                    <a href="/"><img class="logo__img" src="/img/logotransparente.png" alt="Logo">
-                        <span>CuBeats</span>
-                    </a>
-                    <div class="desktop-search">
-                        <form class="header-search">
-                            <input class="header-search__input" type="text" placeholder="¿Qué Estás Buscando?">
-                            <button class="header-search__button"><i class="fa-solid fa-magnifying-glass"></i></button>
-                        </form>
-                    </div>
-                </div>
-                <div class="header-top-right">
-                    <a class="header-top-right__mobileButton" href="/register">SIGN UP</a>
-                    <nav class="header-nav-menu">
-                        <ul class="header-nav-menu__itemlist">
-                            <li class="itemlist__li"><a href="#">Categorias</a></li>
-
-                        </ul>
-                        <ul class="header-nav-menu__itemlist">
-<<<<<<< HEAD:src/views/partials/header.ejs
-                            <li class="itemlist__li"><a href="/users/register">Sign up</a></li>
-                            <li class="itemlist__li"><a href="/users/login"> Sign in</a></li>
-=======
-                            <li class="itemlist__li"><a href="/register">Sign up</a></li>
-                            <li class="itemlist__li"><a href="/login"> Sign in</a></li>
-                        </ul>
-                        <ul class="header-nav-menu__itemlist">
-                            <li class="itemlist__li"><a href="/shoppingCart"><i
-                                        class="fa-solid fa-cart-shopping"></i></a></li>
->>>>>>> develop:views/partials/header.html
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <div class="header-bottom">
-                <form class="header-search">
-                    <input class="header-search__input" type="text" placeholder="¿Qué Estás Buscando?">
-                    <button class="header-search__button"><i class="fa-solid fa-magnifying-glass"></i></button>
-                </form>
-            </div>
+<header class="header">
+    <div class="header-container">
+      <div class="header-top">
+        <div class="header-top-left">
+          <div class="burger-menu">
+            <a class="burger-menu__link" href=""><i class="fas fa-bars burger-menu__i"></i></a>
+          </div>
         </div>
-    </header>
-    <script src="https://kit.fontawesome.com/be2c20f70d.js" crossorigin="anonymous"></script>
-</body>
-
-</html>
+        <div class="header__logo">
+          <a href="/"><img class="logo__img" src="/img/logotransparente.png" alt="Logo">
+            <span>CuBeats</span>
+          </a>
+          <div class="desktop-search">
+            <form class="header-search">
+              <input class="header-search__input" type="text" placeholder="¿Qué Estás Buscando?">
+              <button class="header-search__button"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
+          </div>
+        </div>
+        <div class="header-top-right">
+          <a class="header-top-right__mobileButton" href="/register">SIGN UP</a>
+          <nav class="header-nav-menu">
+            <ul class="header-nav-menu__itemlist">
+              <li class="itemlist__li"><a href="#">Explorar</a></li>
+              <li class="itemlist__li"><a href="#">Comprar</a></li>
+              <li class="itemlist__li"><a href="/products/shoppingCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+            </ul>
+            <ul class="header-nav-menu__itemlist">
+              <li class="itemlist__li"><a href="/users/register">Sign up</a></li>
+              <li class="itemlist__li"><a href="/users/login"> Sign in</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="header-bottom">
+        <form class="header-search">
+          <input class="header-search__input" type="text" placeholder="¿Qué Estás Buscando?">
+          <button class="header-search__button"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+      </div>
+    </div>
+  </header>
