--- a/src/views/shoppingCart.ejs
+++ b/src/views/shoppingCart.ejs
@@ -1,57 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="https://kit.fontawesome.com/be2c20f70d.js" crossorigin="anonymous"></script>
-</head>
+<%- include('./partials/head', {
+    title : 'Shopping Cart'
+   }) %>
 
 <body class="body__shoppingCart">
-    <header class="header">
-        <div class="header-container">
-            <div class="header-top">
-                <div class="header-top-left">
-                    <div class="burger-menu">
-                        <a class="burger-menu__link" href=""><i class="fas fa-bars burger-menu__i"></i></a>
-                    </div>
-                </div>
-                <div class="header__logo">
-                    <a href="/"><img class="logo__img" src="/img/logotransparente.png" alt="Logo">
-                        <span>CuBeats</span>
-                    </a>
-                    <div class="desktop-search">
-                        <form class="header-search">
-                            <input class="header-search__input" type="text" placeholder="¿Qué Estás Buscando?">
-                            <button class="header-search__button"><i class="fa-solid fa-magnifying-glass"></i></button>
-                        </form>
-                    </div>
-                </div>
-                <div class="header-top-right">
-                    <a class="header-top-right__mobileButton" href="#">SIGN UP</a>
-                    <nav class="header-nav-menu">
-                        <ul class="header-nav-menu__itemlist">
-                            <li class="itemlist__li"><a href="#">Explorar</a></li>
-                            <li class="itemlist__li"><a href="#">Comprar</a></li>
-                            <li class="itemlist__li"><a href="#">Vender</a></li>
-                        </ul>
-                        <ul class="header-nav-menu__itemlist">
-                            <li class="itemlist__li"><a href="#">Sign up</a></li>
-                            <li class="itemlist__li"><a href="#"> Sign in</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <div class="header-bottom">
-                <form class="header-search">
-                    <input class="header-search__input" type="text" placeholder="¿Qué Estás Buscando?">
-                    <button class="header-search__button"><i class="fa-solid fa-magnifying-glass"></i></button>
-                </form>
-            </div>
-        </div>
-    </header>
+    <%- include('./partials/header.ejs') %>
     <main class="main__shoppingCart">
         <div class="container__box">
         <section class="products-container">
@@ -106,6 +61,8 @@
         </section>
         </div>
       </main>
+      <%- include('./partials/footer.ejs') %>
+      <%- include('./partials//scripts.ejs') %>
 </body>
 
 </html>
