feat: correción de errores en partials

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -27,9 +27,8 @@
             </form>
         </div>
     </main>
-    <%- include('./partials/footer.ejs') %>
+    <%- include('./partials/scripts.ejs') %>
   
-    <script src="https://kit.fontawesome.com/be2c20f70d.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
