--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -43,7 +43,7 @@
         </div>
       </div>
   </main>
-  <%- include('./partials/footer.ejs') %>
+  <%- include('./partials/scripts.ejs') %>
 </body>
 
 
