--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,52 +1,52 @@
 <footer>
-    <div class="footer-container">
+  <div class="footer-container">
       <div class="footer__menu">
-        <a class="footer__logo" href="/"><img class="logo__img" src="/img/logotransparente.png" alt="Logo" />CuBeats</a>
-        <div class="footer-map">
-          <nav class="footer-map-nav">
-            <h3 class="footer-map-nav__title">Titulo</h3>
-            <ul class="nav__itemList">
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-            </ul>
-          </nav>
-          <nav>
-            <h3 class="footer-map-nav__title">Titulo</h3>
-            <ul class="nav__itemList">
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-            </ul>
-          </nav>
-          <nav>
-            <h3 class="footer-map-nav__title">Titulo</h3>
-            <ul class="nav__itemList">
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-              <li class="itemList__li"><a href="">item</a></li>
-            </ul>
-          </nav>
-        </div>
+          <a class="footer__logo" href="/"><img class="logo__img" src="/img/logotransparente.png"
+                  alt="Logo">CuBeats</a>
+          <div class="footer-map">
+              <nav class="footer-map-nav">
+                  <h3 class="footer-map-nav__title">Titulo</h3>
+                  <ul class="nav__itemList">
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                  </ul>
+              </nav>
+              <nav>
+                  <h3 class="footer-map-nav__title">Titulo</h3>
+                  <ul class="nav__itemList">
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                  </ul>
+              </nav>
+              <nav>
+                  <h3 class="footer-map-nav__title">Titulo</h3>
+                  <ul class="nav__itemList">
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                      <li class="itemList__li"><a href="">item</a></li>
+                  </ul>
+              </nav>
+          </div>
       </div>
       <div class="footer_redes">
-        <i class="fa-brands fa-youtube"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-square-facebook"></i>
-        <i class="fa-brands fa-square-twitter"></i>
-        <i class="fa-brands fa-tiktok"></i>
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-square-facebook"></i>
+          <i class="fa-brands fa-square-twitter"></i>
+          <i class="fa-brands fa-tiktok"></i>
       </div>
       <div class="footer__derechos">
-        <p>
-          Los beats presentados aquí no son de nuestra autoría. No nos hacemos
-          responsables de su contenido o derechos de uso.
-        </p>
+          <p>Los beats presentados aquí no son de nuestra autoría. No nos hacemos responsables de su contenido o
+              derechos de uso.
+          </p>
       </div>
-    </div>
-  </footer>
+  </div>
+</footer>
